--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,7 @@
-﻿alembic==1.18.1
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.8.3
-charset-normalizer==3.4.3
-click==8.2.1
-colorama==0.4.6
-Flask==3.1.2
-Flask-Login==0.6.3
-Flask-Migrate==4.1.0
-Flask-SQLAlchemy==3.1.1
-google-api-core==2.25.1
-google-api-python-client==2.181.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.2
-googleapis-common-protos==1.70.0
-greenlet==3.3.0
-gunicorn==23.0.0
-httplib2==0.31.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-Mako==1.3.10
-MarkupSafe==3.0.2
-MouseInfo==0.1.3
-numpy==2.2.6
-oauthlib==3.3.1
-obsws-python==1.8.0
-opencv-python==4.12.0.88
-packaging==25.0
-pillow==11.3.0
-proto-plus==1.26.1
-protobuf==6.32.1
-psutil==7.0.0
-psycopg2-binary==2.9.9
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-PyAutoGUI==0.9.54
-PyGetWindow==0.0.9
-PyMsgBox==2.0.1
-pyparsing==3.2.4
-pyperclip==1.9.0
-PyRect==0.2.0
-PyScreeze==1.0.1
-pytweening==1.2.0
-requests==2.32.5
-requests-oauthlib==2.0.0
-rsa==4.9.1
-SQLAlchemy==2.0.45
-typing_extensions==4.15.0
-uritemplate==4.2.0
-urllib3==2.5.0
-websocket-client==1.8.0
-Werkzeug==3.1.3
-
+﻿Flask==2.2.5
+Flask-SQLAlchemy==3.0.3
+Flask-Migrate==4.0.4
+Flask-Login==0.6.2
+Werkzeug==2.2.3
+psycopg2-binary==2.9.6
+gunicorn==20.1.0
